--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc8082a2e10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbe2d48f3d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc807fada50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc807fc4e90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbe2d1a4310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbe2d192f50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc8085284d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc8085327d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbe2d769c10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbe2d702850&gt;]</pre>
 </div>
 
 </div>
