--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4ea5533810&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f87d4acc950&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4ea520a9d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4ea520bfd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f87d4b23610&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f87d47f0d10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4ea57b9290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4ea57c08d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f87d50c8610&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f87d507c690&gt;]</pre>
 </div>
 
 </div>
