--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f96471d50d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f47e98fdd10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9646bdce50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9646bdbf90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f47e930bad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f47e930bcd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f964745a750&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f96474537d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f47e9b8e390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f47e9b8e590&gt;]</pre>
 </div>
 
 </div>
