--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff6f12a8710&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6ad142f690&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff6f0fe2b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff6f0fe2d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6ad0df44d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6ad0debf50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff6f1539490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff6f1539690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6ad16d7d90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6ad1671850&gt;]</pre>
 </div>
 
 </div>
