--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f09683f8090&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1a3af929d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f09680c5c90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f09680c5e90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1a3acd7b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1a3acd7d90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0968688510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0968688710&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1a3b22e4d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1a3b22e6d0&gt;]</pre>
 </div>
 
 </div>
