--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1a3af929d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7a184914d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1a3acd7b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1a3acd7d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7a17ea1b10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7a17ea1d50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1a3b22e4d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1a3b22e6d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7a1872e3d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7a1872e610&gt;]</pre>
 </div>
 
 </div>
