--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe3b14a8ad0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5c35f50090&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe3b11ebb10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe3b11ebd10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5c35c1ded0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5c35c8ad90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe3b1a7c3d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe3b1a7c5d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5c3622c790&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5c361e1690&gt;]</pre>
 </div>
 
 </div>
