--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdf5922f610&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9e43af7bd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdf58f67cd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdf58f67f10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9e437c5450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9e437fed90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdf594bc610&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdf594bc850&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9e43db6d50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9e43d6e6d0&gt;]</pre>
 </div>
 
 </div>
