--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff2148d29d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa401b48450&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff21458ac10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff21458ae10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa401868d10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa401868f10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff214b5c490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff214b5c690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa401dd5690&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa401dd5890&gt;]</pre>
 </div>
 
 </div>
