--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa401b48450&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff12cd9cf10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa401868d10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa401868f10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff12cad6ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff12cad6cd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa401dd5690&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa401dd5890&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff12d02d410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff12d02d610&gt;]</pre>
 </div>
 
 </div>
