--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fea8e38ca90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f11e7b91b10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fea8dda9c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fea8dda9e90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f11e759ad50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f11e759af50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fea8e634590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fea8e6347d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f11e7e1f610&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f11e7e1f810&gt;]</pre>
 </div>
 
 </div>
