--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1cce219cd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5c95d80a10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1ccdf24c10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1ccdf24e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5c95df7d50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5c95df7f50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1cce494490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1cce494690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5c9634b710&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5c9634b910&gt;]</pre>
 </div>
 
 </div>
