--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5c95d80a10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0af33a0690&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5c95df7d50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5c95df7f50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0af3096c50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0af3096e50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5c9634b710&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5c9634b910&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0af35eb590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0af35eb790&gt;]</pre>
 </div>
 
 </div>
