--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f30aab1e9d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f53a2ff3ad0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f30aa50bc50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f30aa50be50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f53a2caac90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f53a2caaed0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f30aad94590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f30aad94790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f53a327d610&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f53a327d850&gt;]</pre>
 </div>
 
 </div>
