--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f53a2ff3ad0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7efde82b2750&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f53a2caac90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f53a2caaed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7efde7fe9c10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7efde7fe9e10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f53a327d610&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f53a327d850&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7efde858b290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7efde8540610&gt;]</pre>
 </div>
 
 </div>
