--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7efde82b2750&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff3fc3f5090&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7efde7fe9c10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7efde7fe9e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff3fc104950&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff3fc104b50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7efde858b290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7efde8540610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff3fc66c210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff3fc66c410&gt;]</pre>
 </div>
 
 </div>
