--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff3fc3f5090&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe74e2f3650&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff3fc104950&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff3fc104b50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe74dcf2d50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe74dcf2f50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff3fc66c210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff3fc66c410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe74e57b690&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe74e57b890&gt;]</pre>
 </div>
 
 </div>
