--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3dc53c1410&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcac4e01910&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3dbf1a3cd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3dbf1a3ed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcac4814a90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcac4814c90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3dbfa2f610&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3dbfa2f810&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcac50a0350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcac50a0550&gt;]</pre>
 </div>
 
 </div>
