--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fee482aa3d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff73b07a110&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fee47ca5bd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fee47ca5dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff73ada6c10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff73ada6e50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fee485354d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fee485356d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff73b631590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff73b6317d0&gt;]</pre>
 </div>
 
 </div>
