--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9c6d008810&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ffa8cfe3990&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9c68e04e50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9c68acbe50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ffa8c976a50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ffa8c976c50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9c68ab67d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9c6935a790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ffa8cf4a450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ffa8cf4a650&gt;]</pre>
 </div>
 
 </div>
