--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ffa8cfe3990&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f90bb0f3d50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ffa8c976a50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ffa8c976c50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f90b4d6dd90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f90b4d6df90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ffa8cf4a450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ffa8cf4a650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f90b55f8650&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f90b55f8850&gt;]</pre>
 </div>
 
 </div>
