--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe0b210a3d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa68e71d510&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe0b1b05b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe0b1b05d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa68e441ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa68e441cd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe0b2394410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe0b2394610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa68e707490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa68e999510&gt;]</pre>
 </div>
 
 </div>
