--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa68e71d510&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb52f9b13d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa68e441ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa68e441cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb52f9f6ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb52f6e8cd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa68e707490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa68e999510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb52fc76610&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb52fc405d0&gt;]</pre>
 </div>
 
 </div>
