--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f27b0cd7ad0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd91364e850&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f27b09b9b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f27b09b9d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd91334cb10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd91334cd10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f27b0f293d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f27b0f295d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd9138c8450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd9138c8650&gt;]</pre>
 </div>
 
 </div>
