--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7eff00a590&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f57c8dbc050&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7efed13850&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7efed27e90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f57c8ac3110&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f57c8ae5dd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7eff5ac450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7eff5b8790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f57c90b3990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f57c904f690&gt;]</pre>
 </div>
 
 </div>
