--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9c38b94590&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fda81395b90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9c38bd8cd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9c38bd8ed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fda810cad50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fda813f13d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9c391435d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9c391437d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fda81634610&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fda81686790&gt;]</pre>
 </div>
 
 </div>
