--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff10f496450&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f300e123450&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff10f1d0b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff10f1d0d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f300e15e150&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f300dafdc10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff10fa68450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff10fa68650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f300e3d1390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f300e39b650&gt;]</pre>
 </div>
 
 </div>
