--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcb15409d90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f142bb1c510&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcb15126a50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcb15126c50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f142b83ba90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f142b83b890&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcb156903d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcb156905d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f142c0c9410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f142c0c9210&gt;]</pre>
 </div>
 
 </div>
