--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6c7a75f990&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6ec91595d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6c7a48de90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6c7a49e0d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6ec8b49390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6ec8b44e50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6c7ad15750&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6c7ad15950&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6ec9161910&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6ec94412d0&gt;]</pre>
 </div>
 
 </div>
