--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa234599fd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fca6d3e7f90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa2342aad50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa2342aaf50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fca6d417bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fca6d417dd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa234813610&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa234813810&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fca6d663550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fca6d663750&gt;]</pre>
 </div>
 
 </div>
