--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc2fe91b5d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5ee8ba2190&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc2fe960bd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc2fe960dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5ee88eeb90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5ee88eed90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc2feeca4d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc2feeca6d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5ee8e594d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5ee8e596d0&gt;]</pre>
 </div>
 
 </div>
