--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7f975fce90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff2ac7c6950&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7f97643d50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7f97643f50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff2ac1b6110&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff2ac1b6310&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7f97ba7810&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7f97ba7a10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff2aca539d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff2aca53bd0&gt;]</pre>
 </div>
 
 </div>
