--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff8f09e8550&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbb9d7251d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff8f03cec50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff8f03cee50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbb9d443650&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbb9d439f90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff8f0c60550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff8f0c60750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbb9d99c350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbb9d9a7850&gt;]</pre>
 </div>
 
 </div>
