--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f065d727b50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3abb88e850&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f065d480b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f065d480d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3abb5b5c10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3abb5b5e10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f065d9ea4d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f065d9ea710&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3abbb1f4d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3abbb1f6d0&gt;]</pre>
 </div>
 
 </div>
