--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2dca381710&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb427baced0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2dca3db210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2dca3db410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb427beb950&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb427bebdd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2dca952a90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2dca952c90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb42815acd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb42815aed0&gt;]</pre>
 </div>
 
 </div>
