--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2eaa963910&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f57e954fcd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2eaa68c590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2eaa68c7d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f57e95810d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f57e9251610&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2eaabecd50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2eaabecf90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f57e980bdd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f57e97caf50&gt;]</pre>
 </div>
 
 </div>
