--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8e4b71d410&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7effae418dd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8e4b42b3d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8e4b42b5d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7effae1212d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7effae1214d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8e4b9a4c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8e4b9a4e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7effae691bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7effae691dd0&gt;]</pre>
 </div>
 
 </div>
